@@ -33,11 +33,6 @@ import com.webank.weid.protocol.response.ResponseData;
 
 public class TestGetCredentialHash extends TestBaseServcie {
 
-    @Override
-    public void testInit() {
-        System.out.println();
-    }
-
     @Test
     public void testGetCredentialHashCase1() {
         Credential credential = buildCredential();
@@ -58,7 +53,7 @@ public class TestGetCredentialHash extends TestBaseServcie {
         claim.put("xxxxxxxxxxxxxx", "xxxxxxxxxxxxxx");
         credential.setClaim(claim);
         credential.setContext("v1");
-        credential.setCptId(new Integer(1001));
+        credential.setCptId(Integer.valueOf(1001));
         credential.setExpirationDate(System.currentTimeMillis() + 1000L);
         credential.setId(UUID.randomUUID().toString());
         credential.setIssuer("did:weid:0x0000000000000000");
